// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sc-customer-firstname Logged In Checkout first name provided with URL Params 1`] = `
<sc-customer-firstname size="medium">
  <mock:shadow-root>
    <sc-input autocomplete="first_name" help="" name="first_name" type="text" value="UrlFirst"></sc-input>
  </mock:shadow-root>
</sc-customer-firstname>
`;

exports[`sc-customer-firstname Logged In Checkout first name provided without URL Params 1`] = `
<sc-customer-firstname size="medium">
  <mock:shadow-root>
    <sc-input autocomplete="first_name" help="" name="first_name" type="text" value="CheckoutFirst"></sc-input>
  </mock:shadow-root>
</sc-customer-firstname>
`;

exports[`sc-customer-firstname Logged In Customer and Checkout first name provided with URL Params 1`] = `
<sc-customer-firstname size="medium">
  <mock:shadow-root>
    <sc-input autocomplete="first_name" help="" name="first_name" type="text" value="UrlFirst"></sc-input>
  </mock:shadow-root>
</sc-customer-firstname>
`;

exports[`sc-customer-firstname Logged In Customer and Checkout first name provided without URL Params 1`] = `
<sc-customer-firstname size="medium">
  <mock:shadow-root>
    <sc-input autocomplete="first_name" help="" name="first_name" type="text" value="CheckoutFirst"></sc-input>
  </mock:shadow-root>
</sc-customer-firstname>
`;

exports[`sc-customer-firstname Logged In Customer first name provided with URL Params 1`] = `
<sc-customer-firstname size="medium">
  <mock:shadow-root>
    <sc-input autocomplete="first_name" help="" name="first_name" type="text" value="UrlFirst"></sc-input>
  </mock:shadow-root>
</sc-customer-firstname>
`;

exports[`sc-customer-firstname Logged In Customer first name provided without URL Params 1`] = `
<sc-customer-firstname size="medium">
  <mock:shadow-root>
    <sc-input autocomplete="first_name" help="" name="first_name" type="text" value="CustomerFirst"></sc-input>
  </mock:shadow-root>
</sc-customer-firstname>
`;

exports[`sc-customer-firstname Logged Out Checkout first name provided with URL Params 1`] = `
<sc-customer-firstname size="medium">
  <mock:shadow-root>
    <sc-input autocomplete="first_name" help="" name="first_name" type="text" value="UrlFirst"></sc-input>
  </mock:shadow-root>
</sc-customer-firstname>
`;

exports[`sc-customer-firstname Logged Out Checkout first name provided without URL Params 1`] = `
<sc-customer-firstname size="medium">
  <mock:shadow-root>
    <sc-input autocomplete="first_name" help="" name="first_name" type="text" value="CheckoutFirst"></sc-input>
  </mock:shadow-root>
</sc-customer-firstname>
`;

exports[`sc-customer-firstname Logged Out Customer and Checkout first name provided with URL Params 1`] = `
<sc-customer-firstname size="medium">
  <mock:shadow-root>
    <sc-input autocomplete="first_name" help="" name="first_name" type="text" value="UrlFirst"></sc-input>
  </mock:shadow-root>
</sc-customer-firstname>
`;

exports[`sc-customer-firstname Logged Out Customer and Checkout first name provided without URL Params 1`] = `
<sc-customer-firstname size="medium">
  <mock:shadow-root>
    <sc-input autocomplete="first_name" help="" name="first_name" type="text" value="CustomerFirst"></sc-input>
  </mock:shadow-root>
</sc-customer-firstname>
`;

exports[`sc-customer-firstname Logged Out Customer first name provided with URL Params 1`] = `
<sc-customer-firstname size="medium">
  <mock:shadow-root>
    <sc-input autocomplete="first_name" help="" name="first_name" type="text" value="UrlFirst"></sc-input>
  </mock:shadow-root>
</sc-customer-firstname>
`;

exports[`sc-customer-firstname Logged Out Customer first name provided without URL Params 1`] = `
<sc-customer-firstname size="medium">
  <mock:shadow-root>
    <sc-input autocomplete="first_name" help="" name="first_name" type="text" value="CustomerFirst"></sc-input>
  </mock:shadow-root>
</sc-customer-firstname>
`;
